--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 body {
-  background-color: #0B1C48;
+  background-color: white;
 }
-nav {
+nav{
   display: flex;
   justify-content: space-evenly;
-
+  padding: auto;
 }
